%%{
  init: {
    'theme': 'dark'
  }
}%%
classDiagram
    class GameObject {
        # Texture2D texture
        # Vector2 vector
        + float X
        + float Y
        + float Width
        + float Height
        + GameObject(Texture2D Texture, float X, float Y)
        + void Draw(spriteBatch: SpriteBatch)
    }

    class MovingObject {
        <<abstract>>
        # Vector2 speed
        # MovingObject(Texture2D texture, float X, float Y, float speedX, float speedY)
    }

    class PhysicalObject {
        + bool IsAlive
        + PhysicalObject(Texture2D texture, float X. float Y, float speedX, float speedY)
        + bool CheckCollision(PhysicalObject other)
    }

    class Player {
        - Texture2D bulletTexture
        - double timeSinceLastBullet
        - bool isMoving
        - char movingDirection
        - int textureIndex
        - float textureDeltaTime
        - float gravityConstant
        - bool isJumping
        - bool isFalling
        - float gravityDeltaTime
        - bool fellOf
        + int Points
        + List<Bullet> Bullets
        + Player(Texture2D texture, float X, float Y, float speedX, float speedY, float gravityConst, Texture2D bulletTexture)
        + void Update(GameWindow window, GameTime gameTime)
        + void checkTouchable(PhysicalObject otherObject)
        + void Walkcycle(GameTime gameTime, List<Texture2D> texturesLeft, List<Texture2D> texturesRight)
        + void Draw(SpriteBatch spriteBatch)
        + void Reset(float X, float Y, float speedX, float speedY)
    }

    class Bullet {
        + Bullet(Texture2D texture, float X, float Y, float bulletSpeedConst)
        + void Update(GameWindow window)
    }

    class Enemy {
        # static Random rand
        # int randX1
        # int randX2
        # int randY1
        # int randY2
        # int randPos
        + Enemy(Texture2D texture, float X, float Y, float speedX, float speedY)
        + void setRandPosition(GameWindow window, float x1, float x2, float otherY)*
        + void Update(GameWindow window);
    }

    class HBird {
        - float speedConstX
        + Enemy(Texture2D texture, float X, float Y, float speedX, float speedY, float speedConstX)
        + void setRandPosition(GameWindow window, float x1, float x2, float otherY)
        + void Draw(SpriteBatch spriteBatch)
    }

    class VBird {
        - float speedConstY
        + Enemy(Texture2D texture, float X, float Y, float speedX, float speedY, float speedConstY)
        + void setRandPosition(GameWindow window, float x1, float x2, float otherY)
        + void Draw(SpriteBatch spriteBatch)
    }

    class DBird {
        - float speedConst
        + Enemy(Texture2D texture, float X, float Y, float speedX, float speedY, float speedConst)
        + void setRandPosition(GameWindow window, float x1, float x2, float otherY)
        + void CheckCollision(PhysicalObject other)
        + void Draw(SpriteBatch spriteBatch)
    }
    
    class Sea {
        Sea(Texture2D texture, float X, float Y, float speedX, float speedY)
    }

    class Raft {
        Raft(Texture2D texture, float X, float Y, float speedX, float speedY)
    }
    
    GameObject <|-- MovingObject
    MovingObject <|-- PhysicalObject
    PhysicalObject <|--  Sea
    PhysicalObject <|--  Raft
    PhysicalObject <|--  Player
    PhysicalObject <|--  Bullet
    PhysicalObject <|--  Enemy
    Enemy <|-- HBird
    Enemy <|-- VBird
    Enemy <|-- DBird
    
